[gd_scene load_steps=4 format=3 uid="uid://bxsngafr57xus"]

[ext_resource type="Theme" uid="uid://0yn2t51td8om" path="res://UITheme.tres" id="1_4h3wp"]
[ext_resource type="Script" path="res://StartMenu.gd" id="1_uuglv"]
[ext_resource type="FontFile" uid="uid://ceyyhvi4ismnu" path="res://DungeonFont.ttf" id="3_oh4mp"]

[node name="Control" type="Control" node_paths=PackedStringArray("TTsenable", "TTSVolume", "TTSRate", "keyboard", "voices", "contrast")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4h3wp")
script = ExtResource("1_uuglv")
TTsenable = NodePath("VBoxContainer/TTSEnabled")
TTSVolume = NodePath("VBoxContainer/Volume")
TTSRate = NodePath("VBoxContainer/Rate")
keyboard = NodePath("VBoxContainer/Keyboard")
voices = NodePath("VBoxContainer/Voices")
contrast = NodePath("VBoxContainer/ContrastMode")

[node name="Title" type="Label" parent="."]
layout_mode = 2
offset_left = 23.5
offset_right = 456.5
offset_bottom = 45.0
theme = ExtResource("1_4h3wp")
theme_override_colors/font_color = Color(0.235294, 0.639216, 0.439216, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0.921569, 1)
theme_override_fonts/font = ExtResource("3_oh4mp")
theme_override_font_sizes/font_size = 32
text = "Monsters of the Greenwood"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -108.5
offset_top = -247.0
offset_right = 108.5
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_4h3wp")

[node name="TTSEnabled" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_4h3wp")
text = "Text to speech"

[node name="VolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_4h3wp")
text = "TTS Volume:"

[node name="Volume" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_4h3wp")
value = 50.0

[node name="RateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_4h3wp")
text = "TTS Rate:"

[node name="Rate" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_4h3wp")
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="Voices" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_4h3wp")

[node name="Keyboard" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_4h3wp")
text = "Keyboard/Controller"

[node name="ContrastMode" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_4h3wp")
text = "Contrast Mode"

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_4h3wp")
text = "Start Game"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_4h3wp")
text = "Quit
"

[connection signal="focus_entered" from="VBoxContainer/TTSEnabled" to="." method="_on_tts_enabled_focus_entered"]
[connection signal="toggled" from="VBoxContainer/TTSEnabled" to="." method="_on_tts_enabled_toggled"]
[connection signal="drag_ended" from="VBoxContainer/Volume" to="." method="_on_volume_drag_ended"]
[connection signal="focus_entered" from="VBoxContainer/Volume" to="." method="_on_volume_focus_entered"]
[connection signal="drag_ended" from="VBoxContainer/Rate" to="." method="_on_rate_drag_ended"]
[connection signal="focus_entered" from="VBoxContainer/Rate" to="." method="_on_rate_focus_entered"]
[connection signal="focus_entered" from="VBoxContainer/Voices" to="." method="_on_voices_focus_entered"]
[connection signal="item_focused" from="VBoxContainer/Voices" to="." method="_on_voices_item_focused"]
[connection signal="item_selected" from="VBoxContainer/Voices" to="." method="_on_voices_item_selected"]
[connection signal="focus_entered" from="VBoxContainer/Keyboard" to="." method="_on_check_button_focus_entered"]
[connection signal="toggled" from="VBoxContainer/Keyboard" to="." method="_on_check_button_toggled"]
[connection signal="focus_entered" from="VBoxContainer/ContrastMode" to="." method="_on_contrast_mode_focus_entered"]
[connection signal="toggled" from="VBoxContainer/ContrastMode" to="." method="_on_contrast_mode_toggled"]
[connection signal="focus_entered" from="VBoxContainer/StartGame" to="." method="_on_start_game_focus_entered"]
[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="focus_entered" from="VBoxContainer/Quit" to="." method="_on_quit_focus_entered"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
